@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-21T01:12:51Z",
-  "count" : 8,
-  "count_minmax" : [ 5, 8 ],
-  "count_decinc" : [ -0, +8 ],
-  "uniques" : 7,
-  "uniques_minmax" : [ 4, 7 ],
-  "uniques_decinc" : [ -0, +7 ]
+  "timestamp" : "2022-06-03T08:20:23Z",
+  "count" : 2,
+  "count_minmax" : [ 2, 8 ],
+  "count_decinc" : [ -6, +8 ],
+  "uniques" : 2,
+  "uniques_minmax" : [ 2, 7 ],
+  "uniques_decinc" : [ -5, +7 ]
 }
