@@ -1,16 +1,16 @@
 {
-  "timestamp" : "2022-06-01T01:53:45Z",
+  "timestamp" : "2022-06-03T08:20:23Z",
   "count_outdated" : 262,
   "uniques_outdated" : 153,
-  "count" : 275,
-  "uniques" : 164,
+  "count" : 269,
+  "uniques" : 159,
   "clones" : [
     {
       "timestamp": "2022-05-20T00:00:00Z",
-      "count": 8,
-      "count_minmax": [ 5, 8 ],
-      "uniques": 7,
-      "uniques_minmax": [ 4, 7 ]
+      "count": 2,
+      "count_minmax": [ 2, 8 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 7 ]
     },
     {
       "timestamp": "2022-05-30T00:00:00Z",
