@@ -1,11 +1,11 @@
 {
-  "count": 13,
-  "uniques": 8,
+  "count": 7,
+  "uniques": 4,
   "clones": [
     {
       "timestamp": "2022-05-20T00:00:00Z",
-      "count": 8,
-      "uniques": 7
+      "count": 2,
+      "uniques": 2
     },
     {
       "timestamp": "2022-05-30T00:00:00Z",
